# edsdkpp

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
include/edsdk++/: camera-list.hpp  camera.hpp  core.hpp  edsdkpp.hpp  exception.hpp  properties.hpp
src/edsdkpp-demo/: _edsdkpp-demo.cpp
